--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,26 @@ input[type='text'] , input[type='password']{
 .or{
     color: rgb(122, 122, 122);
 }
+.or::before{
+    content: "";
+    background-color: rgb(122, 122, 122);
+    width: 40px;
+    height: 1px;
+    display: block;
+    position: relative;
+    top: 11px;
+    right: 51px;
+}
+.or::after{
+    content: "";
+    background-color: rgb(123, 123, 123);
+    width: 40px;
+    height: 1px;
+    display: block;
+    position: relative;
+    top: -8px;
+    right: -31px;
+}
 .cna{
     padding: 12px 12px;
     border-radius: 5px;
